# MVLPT

./: ImageStore.sln  README.md
ImageStore.Backend.Bll/: ImageStore.Backend.Bll.csproj
ImageStore.Backend.Common/: ImageStore.Backend.Common.csproj
ImageStore.Backend.Common/Constants/: Roles.cs
ImageStore.Backend.Common/Dtos/: ErrorDto.cs
ImageStore.Backend.Common/Exceptions/: ImageStoreException.cs
ImageStore.Backend.Common/Options/: DbSeedOptions.cs  ImageOptions.cs  JwtOptions.cs
ImageStore.Backend.Dal/: ImageStore.Backend.Dal.csproj  ImageStoreDbContext.cs
ImageStore.Backend.Dal/Configurations/: CommentConfiguration.cs  ImageConfiguration.cs  UserConfiguration.cs
ImageStore.Backend.Dal/Entities/: Comment.cs  Image.cs  User.cs
ImageStore.Backend.Dal/Mapper/: ImageProfile.cs  UserProfile.cs
ImageStore.Backend.Dal/Migrations/: 20201028164934_Init.Designer.cs  20201028164934_Init.cs  ImageStoreDbContextModelSnapshot.cs
ImageStore.Backend.Dal/Seed/: DbInitializer.cs
ImageStore.Backend.Parser/: ImageStore.Backend.Parser.csproj  ParserService.cs
ImageStore.Backend.Parser/caff-parser/: README.md
ImageStore.Backend.Web/: ImageStore.Backend.Web.csproj  Program.cs  Startup.cs  appsettings.json
ImageStore.Backend.Web/Controllers/: AccountController.cs  ApiControllerBase.cs  ImageController.cs
ImageStore.Frontend/: .eslintrc.js  angular.json  angularclient.nswag  karma.conf.js  package-lock.json  package.json
ImageStore.Frontend/src/: index.html  (+1 more)
ImageStore.Parser/: ParserService.cs
ImageStore.Parser/caff-parser/src/: CMakeLists.txt  ciff.cpp
(+45 files in other folders)
